<resources>
    <string name="app_name">StreetWatch</string>
    <string name="start_streaming">Start streaming</string>
    <string name="stop_streaming">Stop streaming</string>
    <string name="server_url_hint">Server URL, e.g. http://192.168.1.100:8000</string>
    <string name="interval_hint">Frame interval (ms)</string>
    <string name="zoom_1x">1x</string>
    <string name="zoom_2x">2x</string>
    <string name="zoom_5x">5x</string>
</resources>